--- a/ansible/my-roles/slaves/handlers/main.yml
+++ b/ansible/my-roles/slaves/handlers/main.yml
@@ -1,3 +1,24 @@
-#SPDX-License-Identifier: MIT-0
+# SPDX-License-Identifier: MIT-0
 ---
-# handlers file for slaves
+# handlers file for kubernetes master/worker
+
+- name: restart docker
+  ansible.builtin.systemd:
+    name: docker
+    state: restarted
+    daemon_reload: yes
+    enabled: yes
+  become: true
+  listen: restart docker
+
+- name: restart cri-dockerd
+  ansible.builtin.systemd:
+    name: "{{ item }}"
+    state: restarted
+    daemon_reload: yes
+    enabled: yes
+  loop:
+    - cri-docker.socket
+    - cri-docker.service
+  become: true
+  listen: restart cri-dockerd
