--- a/ansible/my-roles/slaves/tasks/main.yml
+++ b/ansible/my-roles/slaves/tasks/main.yml
@@ -1,8 +1,273 @@
 # SPDX-License-Identifier: MIT-0
 ---
-# Main task for worker node setup
-- name: Include preflight setup
-  ansible.builtin.include_tasks: preflight.yml
+# tasks file for worker/slave
 
-- name: Include kubeadm join logic
-  ansible.builtin.include_tasks: join.yml
+# Pre-flight checks and system preparation
+- name: Check system RAM
+  ansible.builtin.shell: |
+    total_ram=$(free -m | awk 'NR==2{print $2}')
+    echo "Total RAM: ${total_ram}MB"
+    if [ $total_ram -lt 1700 ]; then
+      echo "WARNING: System has ${total_ram}MB RAM, but Kubernetes recommends minimum 1700MB"
+    fi
+  register: ram_check
+  changed_when: false
+
+- name: Display RAM check results
+  ansible.builtin.debug:
+    msg: "{{ ram_check.stdout }}"
+
+# Load required kernel modules
+- name: Load br_netfilter kernel module
+  ansible.builtin.modprobe:
+    name: br_netfilter
+    state: present
+  become: true
+
+- name: Load overlay kernel module
+  ansible.builtin.modprobe:
+    name: overlay
+    state: present
+  become: true
+
+- name: Make kernel modules persistent
+  ansible.builtin.copy:
+    content: |
+      br_netfilter
+      overlay
+    dest: /etc/modules-load.d/k8s.conf
+    mode: '0644'
+  become: true
+
+# Configure sysctl settings for Kubernetes
+- name: Configure sysctl for Kubernetes
+  ansible.builtin.copy:
+    content: |
+      net.bridge.bridge-nf-call-iptables  = 1
+      net.bridge.bridge-nf-call-ip6tables = 1
+      net.ipv4.ip_forward                 = 1
+    dest: /etc/sysctl.d/k8s.conf
+    mode: '0644'
+  become: true
+
+- name: Apply sysctl settings
+  ansible.builtin.command: sysctl --system
+  become: true
+  changed_when: true
+
+# Configure Docker as container runtime for Kubernetes
+- name: Create Docker daemon configuration directory
+  ansible.builtin.file:
+    path: /etc/docker
+    state: directory
+    mode: '0755'
+  become: true
+
+- name: Configure Docker daemon for Kubernetes
+  ansible.builtin.copy:
+    content: |
+      {
+        "exec-opts": ["native.cgroupdriver=systemd"],
+        "log-driver": "json-file",
+        "log-opts": {
+          "max-size": "100m"
+        },
+        "storage-driver": "overlay2"
+      }
+    dest: /etc/docker/daemon.json
+    mode: '0644'
+  become: true
+  notify: restart docker
+
+- name: Restart Docker service
+  ansible.builtin.systemd:
+    name: docker
+    state: restarted
+    enabled: yes
+  become: true
+
+- name: Create cri-dockerd configuration directory
+  ansible.builtin.file:
+    path: /etc/systemd/system/cri-docker.service.d
+    state: directory
+    mode: '0755'
+  become: true
+
+# Install and configure cri-dockerd (required for Docker with Kubernetes 1.24+)
+- name: Download cri-dockerd
+  ansible.builtin.get_url:
+    url: "https://github.com/Mirantis/cri-dockerd/releases/download/v0.3.4/cri-dockerd-0.3.4.amd64.tgz"
+    dest: /tmp/cri-dockerd.tgz
+    mode: '0644'
+  become: true
+
+- name: Extract cri-dockerd
+  ansible.builtin.unarchive:
+    src: /tmp/cri-dockerd.tgz
+    dest: /tmp
+    remote_src: yes
+  become: true
+
+- name: Install cri-dockerd binary
+  ansible.builtin.copy:
+    src: /tmp/cri-dockerd/cri-dockerd
+    dest: /usr/local/bin/cri-dockerd
+    mode: '0755'
+    remote_src: yes
+  become: true
+
+- name: Create cri-dockerd systemd service
+  ansible.builtin.copy:
+    content: |
+      [Unit]
+      Description=CRI Interface for Docker Application Container Engine
+      Documentation=https://docs.mirantis.com
+      After=network-online.target firewalld.service docker.service
+      Wants=network-online.target
+      Requires=cri-docker.socket
+
+      [Service]
+      Type=notify
+      ExecStart=/usr/local/bin/cri-dockerd --container-runtime-endpoint fd://
+      ExecReload=/bin/kill -s HUP $MAINPID
+      TimeoutSec=0
+      RestartSec=2
+      Restart=always
+
+      StartLimitBurst=3
+      StartLimitInterval=60s
+
+      LimitNOFILE=infinity
+      LimitNPROC=infinity
+      LimitCORE=infinity
+
+      TasksMax=infinity
+      Delegate=yes
+      KillMode=process
+
+      [Install]
+      WantedBy=multi-user.target
+    dest: /etc/systemd/system/cri-docker.service
+    mode: '0644'
+  become: true
+
+- name: Create cri-dockerd socket service
+  ansible.builtin.copy:
+    content: |
+      [Unit]
+      Description=CRI Docker Socket for the API
+      PartOf=cri-docker.service
+
+      [Socket]
+      ListenStream=%t/cri-dockerd.sock
+      SocketMode=0660
+      SocketUser=root
+      SocketGroup=docker
+
+      [Install]
+      WantedBy=sockets.target
+    dest: /etc/systemd/system/cri-docker.socket
+    mode: '0644'
+  become: true
+
+- name: Reload systemd and start cri-dockerd
+  ansible.builtin.systemd:
+    daemon_reload: yes
+    name: "{{ item }}"
+    enabled: yes
+    state: started
+  loop:
+    - cri-docker.socket
+    - cri-docker.service
+  become: true
+
+# Get join command from master node
+- name: Fetch join command from master
+  ansible.builtin.slurp:
+    src: /tmp/kubernetes-join-command
+  register: join_command_file
+  delegate_to: "{{ groups['master'][0] }}"
+  become: true
+
+- name: Set join command fact
+  ansible.builtin.set_fact:
+    join_command: "{{ join_command_file['content'] | b64decode | trim }}"
+
+- name: Display join command
+  ansible.builtin.debug:
+    msg: "Join command: {{ join_command }}"
+
+# Check if node is already part of cluster
+- name: Check if node is already joined
+  ansible.builtin.command: kubectl get nodes
+  register: node_status
+  delegate_to: "{{ groups['master'][0] }}"
+  become: true
+  become_user: ubuntu
+  environment:
+    KUBECONFIG: /home/ubuntu/.kube/config
+  failed_when: false
+  changed_when: false
+
+- name: Check if current node is in cluster
+  ansible.builtin.set_fact:
+    node_already_joined: "{{ ansible_hostname in node_status.stdout }}"
+  when: node_status.rc == 0
+
+- name: Set node_already_joined to false if kubectl failed
+  ansible.builtin.set_fact:
+    node_already_joined: false
+  when: node_status.rc != 0
+
+# Join the worker node to the cluster
+- name: Join worker node to cluster
+  ansible.builtin.command: "{{ join_command }}"
+  register: join_result
+  become: true
+  when: not node_already_joined
+  failed_when: join_result.rc != 0 and "already exists" not in join_result.stderr
+
+- name: Display join result
+  ansible.builtin.debug:
+    msg: "{{ join_result.stdout }}"
+  when: join_result is defined and join_result.stdout is defined
+
+# Verify node joined successfully
+- name: Wait for node to appear in cluster
+  ansible.builtin.command: kubectl get nodes
+  register: verify_node
+  delegate_to: "{{ groups['master'][0] }}"
+  become: true
+  become_user: ubuntu
+  environment:
+    KUBECONFIG: /home/ubuntu/.kube/config
+  until: ansible_hostname in verify_node.stdout
+  retries: 30
+  delay: 10
+  when: not node_already_joined
+
+- name: Wait for node to be ready
+  ansible.builtin.shell: |
+    kubectl get node {{ ansible_hostname }} -o jsonpath='{.status.conditions[?(@.type=="Ready")].status}'
+  register: node_ready_status
+  delegate_to: "{{ groups['master'][0] }}"
+  become: true
+  become_user: ubuntu
+  environment:
+    KUBECONFIG: /home/ubuntu/.kube/config
+  until: node_ready_status.stdout == "True"
+  retries: 30
+  delay: 10
+
+- name: Display final node status
+  ansible.builtin.command: kubectl get nodes -o wide
+  register: final_status
+  delegate_to: "{{ groups['master'][0] }}"
+  become: true
+  become_user: ubuntu
+  environment:
+    KUBECONFIG: /home/ubuntu/.kube/config
+
+- name: Show cluster status
+  ansible.builtin.debug:
+    msg: "{{ final_status.stdout }}"
