--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -1,15 +1,15 @@
 ---
-# - name: Common setup
-#   hosts: all
-#   become: yes
-#   roles:
-#     - my-roles/common
+- name: Common setup
+  hosts: all
+  become: yes
+  roles:
+    - my-roles/common
 
-# - name: Master setup
-#   hosts: master
-#   become: yes
-#   roles:
-#     - my-roles/master
+- name: Master setup
+  hosts: master
+  become: yes
+  roles:
+    - my-roles/master
 
 - name: Slave setup
   hosts: slaves
